--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -212,39 +212,28 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Player/Player_BP.Player_BP
-OpenAssetsAtExit=/Game/Blueprints/AOE/Projectile/AO1E.AO1E
-OpenAssetsAtExit=/Game/Drawbridge/Drawbridge_Blueprint.Drawbridge_Blueprint
-OpenAssetsAtExit=/Game/Materials/MM_White.MM_White
-OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/MagTimer.MagTimer
-OpenAssetsAtExit=/Game/Drawbridge/Drawbridge_animated.Drawbridge_animated_door
-OpenAssetsAtExit=/Game/Drawbridge/Drawbridge_animated.Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece
-OpenAssetsAtExit=/Game/Drawbridge/Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece_Anim.Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece_Anim
-OpenAssetsAtExit=/Game/Drawbridge/Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece_PhysicsAsset.Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece_PhysicsAsset
-OpenAssetsAtExit=/Game/Drawbridge/Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece_Skeleton.Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece_Skeleton
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/MM_White
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Blueprints/UI/Widgets/MagTimer
-MRUItem3=/Game/Levels/testYellow
-MRUItem4=/Game/Drawbridge/Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece_Skeleton
-MRUItem5=/Game/Drawbridge/Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece_PhysicsAsset
-MRUItem6=/Game/Drawbridge/Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece_Anim
-MRUItem7=/Game/Drawbridge/Drawbridge_animated
-MRUItem8=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Stones_R
-MRUItem9=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Stones_L
-MRUItem10=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Inside_bridge_piece
-MRUItem11=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Pillars
-MRUItem12=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Gate_opening
-MRUItem13=/Game/Drawbridge/Drawbridge_Blueprint
-MRUItem14=/Game/Blueprints/AOE/Projectile/AO1E
-MRUItem15=/Game/Player/Player_BP
-MRUItem16=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem17=/Game/Levels/Splash_screen
-MRUItem18=/Game/Blueprints/UI/HUD1_nowheel
-MRUItem19=/Game/Blueprints/UI/Widgets/HUD6
+MRUItem0=/Game/Materials/Mat_RedPaintPickup
+MRUItem1=/Game/Materials/Mat_PortalPickup
+MRUItem2=/Game/Materials/Mat_PinkPickup
+MRUItem3=/Game/Materials/Mat_FinalPickup
+MRUItem4=/Game/Levels/Forest
+MRUItem5=/Game/Materials/MM_White
+MRUItem6=/Game/Blueprints/UI/Widgets/MagTimer
+MRUItem7=/Game/Levels/testYellow
+MRUItem8=/Game/Drawbridge/Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece_Skeleton
+MRUItem9=/Game/Drawbridge/Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece_PhysicsAsset
+MRUItem10=/Game/Drawbridge/Drawbridge_animated_Bridge_LP_Combined_Moving_bridge_piece_Anim
+MRUItem11=/Game/Drawbridge/Drawbridge_animated
+MRUItem12=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Stones_R
+MRUItem13=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Stones_L
+MRUItem14=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Inside_bridge_piece
+MRUItem15=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Pillars
+MRUItem16=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Gate_opening
+MRUItem17=/Game/Drawbridge/Drawbridge_Blueprint
+MRUItem18=/Game/Blueprints/AOE/Projectile/AO1E
+MRUItem19=/Game/Player/Player_BP
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1748,6 +1737,10 @@ None=======
 /Game/Blueprints/UI/HUD4_nowheel.HUD4_nowheel=0
 /Game/Blueprints/UI/Widgets/HUD6.HUD6=0
 /Game/Blueprints/UI/HUD1_nowheel.HUD1_nowheel=1
+/Game/Materials/Mat_FinalPickup.Mat_FinalPickup=1
+/Game/Materials/Mat_PinkPickup.Mat_PinkPickup=1
+/Game/Materials/Mat_PortalPickup.Mat_PortalPickup=1
+/Game/Materials/Mat_RedPaintPickup.Mat_RedPaintPickup=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1813,7 +1806,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=247.000 Y=22.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1360.000 Y=724.000
+WindowSize=X=1365.000 Y=729.000
 None=======
 InitiallyMaximized=True
 
@@ -1832,7 +1825,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -3406,7 +3399,7 @@ MRUItem11=/Game/Levels/Magenta_Test_Room
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=PIE
+LastLogListing=LightingResults
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -3709,7 +3702,7 @@ PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,
-CameraComponent=CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|ExposureAdvanced,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Dirt Mask,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features|Ambient Cubemap,CameraComponent.PostProcess.Rendering Features|Light Propagation Volume,CameraComponent.PostProcess.Rendering Features,
+CameraComponent=CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Glints,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Wave Direction,MaterialEditorInstanceConstant.ParameterGroups.Waves,MaterialEditorInstanceConstant.ParameterGroups.Wall,
 MaterialInstanceConstant=
