--- a/Sero_4.26/Serotopia_Grey_1 4.26/Config/DefaultEngine.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
+r.AllowStaticLighting=False
 
 [/Script/Engine.CollisionProfile]
 +Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,bCanModify=False,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision")
@@ -40,5 +41,4 @@ r.DefaultFeature.AutoExposure=False
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
-
 
