Revert "air control and jump height adjustment"
This reverts commit 487fa5ff6997d741b54e29a8af883207138d757d.

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -202,7 +202,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/MainMenu
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -212,32 +212,28 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Testing/disappear_cube_blueprint.disappear_cube_blueprint
-OpenAssetsAtExit=/Game/Blueprints/AOE/Splatter/AOE_Red.AOE_Red
-OpenAssetsAtExit=/Game/Blueprints/AOE/Projectile/AO1E.AO1E
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/AOE/Projectile/AO1E
-MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem2=/Game/Blueprints/AOE/Splatter/AOE_Decal
-MRUItem3=/Game/Blueprints/AOE/Splatter/AOE_Red
-MRUItem4=/Game/Blueprints/Testing/disappear_cube_blueprint
-MRUItem5=/Game/Levels/Forest
-MRUItem6=/Game/Materials/Mat_FinalPickup
-MRUItem7=/Game/Materials/Mat_VFX_Shockwave
-MRUItem8=/Game/Blueprints/Pickups/VFX_Shockwave_Actor
-MRUItem9=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem10=/Game/Blueprints/AOE/Projectile/Materials/paint1
-MRUItem11=/Game/Blueprints/AOE/Splatter/Material/paint3
-MRUItem12=/Game/Materials/Skybox
-MRUItem13=/Game/Materials/Mat_ToonShade_InstCave
-MRUItem14=/Game/Bridge/materials/lambert2
-MRUItem15=/Game/Materials/Mat_ToonShade
-MRUItem16=/Game/Materials/Mat_CloudDeck
-MRUItem17=/Game/Blueprints/Pickups/VFX_Shockwave
-MRUItem18=/Game/Materials/Mat_RedPaintPickup
-MRUItem19=/Game/Materials/Mat_PortalPickup
+MRUItem0=/Game/Materials/Mat_FinalPickup
+MRUItem1=/Game/Materials/Mat_VFX_Shockwave
+MRUItem2=/Game/Blueprints/Pickups/VFX_Shockwave_Actor
+MRUItem3=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem4=/Game/Blueprints/AOE/Projectile/AO1E
+MRUItem5=/Game/Blueprints/AOE/Projectile/Materials/paint1
+MRUItem6=/Game/Blueprints/AOE/Splatter/Material/paint3
+MRUItem7=/Game/Levels/Forest
+MRUItem8=/Game/Materials/Skybox
+MRUItem9=/Game/Materials/Mat_ToonShade_InstCave
+MRUItem10=/Game/Bridge/materials/lambert2
+MRUItem11=/Game/Materials/Mat_ToonShade
+MRUItem12=/Game/Materials/Mat_CloudDeck
+MRUItem13=/Game/Blueprints/Pickups/VFX_Shockwave
+MRUItem14=/Game/Materials/Mat_RedPaintPickup
+MRUItem15=/Game/Materials/Mat_PortalPickup
+MRUItem16=/Game/Materials/Mat_PinkPickup
+MRUItem17=/Game/Materials/MM_White
+MRUItem18=/Game/Blueprints/UI/Widgets/MagTimer
+MRUItem19=/Game/Levels/testYellow
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1588,13 +1584,6 @@ MaterialExpressionTime.MaterialExpression=True
 MaterialExpressionDeltaTime.MaterialExpression=True
 MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
-AOE_Red_C.Tick=True
-AOE_Red_C.Default=True
-AOE_Red_C.Replication=True
-AOE_Red_C.Rendering=True
-AOE_Red_C.Collision=True
-AOE_Red_C.Actor=True
-AOE_Red_C.Input=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -1663,8 +1652,8 @@ Widget=
 Visual=
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-StaticMeshComponent=
-MeshComponent=
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
@@ -1872,7 +1861,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=247.000 Y=22.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1375.000 Y=739.000
+WindowSize=X=1370.000 Y=734.000
 None=======
 InitiallyMaximized=True
 
@@ -1891,7 +1880,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../../../IG/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -3780,7 +3769,7 @@ NiagaraSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSetti
 NiagaraEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,
 SteamVREditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,
-StaticMeshComponent=
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Drawbridge_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
 CapsuleComponent=
@@ -3793,11 +3782,8 @@ BrushComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.
 Skybox_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SceneFinish_Actor_C=
 K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-DisappearBridge_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-disappear_cube_blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Testing/disappear_cube_blueprint.disappear_cube_blueprint;
 RecentlyPlaced=/Game/Blueprints/AOE/Splatter/AOE_Yellow.AOE_Yellow;
 RecentlyPlaced=/Game/ParticleSystems/P_Paint.P_Paint;
 RecentlyPlaced=/Game/ParticleSystems/P_PaintSplat.P_PaintSplat;
@@ -3817,6 +3803,7 @@ RecentlyPlaced=/Game/Tower_texture_final_03_Mat.Tower_texture_final_03_Mat;
 RecentlyPlaced=/Game/StarterContent/Materials/MI_Basic_Floor.MI_Basic_Floor;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
 RecentlyPlaced=/Game/Tower_floor_final_3_Mat.Tower_floor_final_3_Mat;
+RecentlyPlaced=/Game/Tower_floor_final_3.Tower_floor_final_3;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
