--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Table_Forest
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -212,30 +212,28 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Table_Forest/M_Table.M_Table
-OpenAssetsAtExit=/Game/Table_Forest/Table.Table
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Table_Forest/Table
-MRUItem1=/Game/Table_Forest/M_Table
-MRUItem2=/Game/Bed_Forest/bed
-MRUItem3=/Game/Bed_Forest/M_Bed
-MRUItem4=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem5=/Game/Bench_Bubble/lambert1
-MRUItem6=/Game/Chair/lambert1
-MRUItem7=/Game/Chair/Chair_Low_Forest
-MRUItem8=/Game/Materials/Mat_FinalPickup
-MRUItem9=/Game/Materials/Mat_VFX_Shockwave
-MRUItem10=/Game/Blueprints/Pickups/VFX_Shockwave_Actor
-MRUItem11=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem12=/Game/Blueprints/AOE/Projectile/AO1E
-MRUItem13=/Game/Blueprints/AOE/Projectile/Materials/paint1
-MRUItem14=/Game/Blueprints/AOE/Splatter/Material/paint3
-MRUItem15=/Game/Levels/Forest
-MRUItem16=/Game/Materials/Skybox
-MRUItem17=/Game/Materials/Mat_ToonShade_InstCave
-MRUItem18=/Game/Bridge/materials/lambert2
-MRUItem19=/Game/Materials/Mat_ToonShade
+MRUItem0=/Game/Materials/Mat_FinalPickup
+MRUItem1=/Game/Materials/Mat_VFX_Shockwave
+MRUItem2=/Game/Blueprints/Pickups/VFX_Shockwave_Actor
+MRUItem3=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem4=/Game/Blueprints/AOE/Projectile/AO1E
+MRUItem5=/Game/Blueprints/AOE/Projectile/Materials/paint1
+MRUItem6=/Game/Blueprints/AOE/Splatter/Material/paint3
+MRUItem7=/Game/Levels/Forest
+MRUItem8=/Game/Materials/Skybox
+MRUItem9=/Game/Materials/Mat_ToonShade_InstCave
+MRUItem10=/Game/Bridge/materials/lambert2
+MRUItem11=/Game/Materials/Mat_ToonShade
+MRUItem12=/Game/Materials/Mat_CloudDeck
+MRUItem13=/Game/Blueprints/Pickups/VFX_Shockwave
+MRUItem14=/Game/Materials/Mat_RedPaintPickup
+MRUItem15=/Game/Materials/Mat_PortalPickup
+MRUItem16=/Game/Materials/Mat_PinkPickup
+MRUItem17=/Game/Materials/MM_White
+MRUItem18=/Game/Blueprints/UI/Widgets/MagTimer
+MRUItem19=/Game/Levels/testYellow
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1798,11 +1796,6 @@ None=======
 /Game/Blueprints/AOE/Projectile/Materials/paint1.paint1=1
 /Game/Blueprints/AOE/Splatter/Material/paint3.paint3=1
 /Game/Materials/Skybox.Skybox=1
-/Game/Chair/Chair_Low_Forest.Chair_Low_Forest=1
-/Game/Chair/lambert1.lambert1=1
-/Game/Bench_Bubble/lambert1.lambert1=1
-/Game/Bed_Forest/M_Bed.M_Bed=1
-/Game/Bed_Forest/bed.bed=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1866,11 +1859,11 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=624.000 Y=235.000
-ScreenPosition=X=452.000 Y=67.000
+ScreenPosition=X=247.000 Y=22.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1370.000 Y=914.000
+WindowSize=X=1370.000 Y=734.000
 None=======
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3461,7 +3454,7 @@ MRUItem11=/Game/Levels/Magenta_Test_Room
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=FBXImport
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -3870,6 +3863,7 @@ None=======
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 bRealtimeMaterialViewport=False
 
 [MaterialEditor]
