--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Bed_Forest
+ContentBrowserTab1.SelectedPaths=/Game/Slide
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -1859,7 +1859,7 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=624.000 Y=235.000
-ScreenPosition=X=247.000 Y=22.000
+ScreenPosition=X=322.000 Y=47.000
 WindowSize=X=1305.000 Y=745.000
 WindowSize=X=1365.000 Y=729.000
 None=======
@@ -1880,7 +1880,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../../IG/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia Game/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -3439,8 +3439,8 @@ PhysicsAssetEditor.TimeStamp=2021.02.09-23.59.31
 PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/MainMenu
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/Forest
 MRUItem2=/Game/Levels/testYellow
 MRUItem3=/Game/Levels/Splash_screen
 MRUItem4=/Game/Levels/TechDemo
