--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Slide
+ContentBrowserTab1.SelectedPaths=/Game/BookCase
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -214,26 +214,26 @@ ToolbarOpenBPClass.CurrentViewType=0
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/Mat_FinalPickup
-MRUItem1=/Game/Materials/Mat_VFX_Shockwave
-MRUItem2=/Game/Blueprints/Pickups/VFX_Shockwave_Actor
-MRUItem3=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem4=/Game/Blueprints/AOE/Projectile/AO1E
-MRUItem5=/Game/Blueprints/AOE/Projectile/Materials/paint1
-MRUItem6=/Game/Blueprints/AOE/Splatter/Material/paint3
-MRUItem7=/Game/Levels/Forest
-MRUItem8=/Game/Materials/Skybox
-MRUItem9=/Game/Materials/Mat_ToonShade_InstCave
-MRUItem10=/Game/Bridge/materials/lambert2
-MRUItem11=/Game/Materials/Mat_ToonShade
-MRUItem12=/Game/Materials/Mat_CloudDeck
-MRUItem13=/Game/Blueprints/Pickups/VFX_Shockwave
-MRUItem14=/Game/Materials/Mat_RedPaintPickup
-MRUItem15=/Game/Materials/Mat_PortalPickup
-MRUItem16=/Game/Materials/Mat_PinkPickup
-MRUItem17=/Game/Materials/MM_White
-MRUItem18=/Game/Blueprints/UI/Widgets/MagTimer
-MRUItem19=/Game/Levels/testYellow
+MRUItem0=/Game/BookCase/Side_Wall_Pieces
+MRUItem1=/Game/BookCase/Shelve_Pieces
+MRUItem2=/Game/BookCase/lambert1
+MRUItem3=/Game/BookCase/How_TF_Did_I_Forget_
+MRUItem4=/Game/BookCase/Cabinet_Door_Pieces
+MRUItem5=/Game/BookCase/Bookcase
+MRUItem6=/Game/BookCase/Bookcase_PhysicsAsset
+MRUItem7=/Game/BookCase/Bookshelf_Top_Pieces
+MRUItem8=/Game/BookCase/Bookcase_Skeleton
+MRUItem9=/Game/Candle/Candle
+MRUItem10=/Game/Candle/M_Candle
+MRUItem11=/Game/Easel/Easel
+MRUItem12=/Game/Easel/lambert1
+MRUItem13=/Game/PotionBottles/RoundBot
+MRUItem14=/Game/PotionBottles/M_RoundBot
+MRUItem15=/Game/PotionBottles/PineconeBot
+MRUItem16=/Game/PotionBottles/OcaBot
+MRUItem17=/Game/PotionBottles/LongBot
+MRUItem18=/Game/PotionBottles/AppleBot
+MRUItem19=/Game/PotionBottles/M_Bot
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1584,6 +1584,9 @@ MaterialExpressionTime.MaterialExpression=True
 MaterialExpressionDeltaTime.MaterialExpression=True
 MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionDivide.MaterialExpressionDivide=True
+MaterialExpressionDivide.MaterialExpression=True
+FbxImportUI.Animation=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -1796,6 +1799,25 @@ None=======
 /Game/Blueprints/AOE/Projectile/Materials/paint1.paint1=1
 /Game/Blueprints/AOE/Splatter/Material/paint3.paint3=1
 /Game/Materials/Skybox.Skybox=1
+/Game/PotionBottles/LongBot.LongBot=1
+/Game/PotionBottles/OcaBot.OcaBot=1
+/Game/PotionBottles/RoundBot.RoundBot=1
+/Game/PotionBottles/PineconeBot.PineconeBot=1
+/Game/PotionBottles/AppleBot.AppleBot=1
+/Game/PotionBottles/M_Bot.M_Bot=1
+/Game/PotionBottles/M_Cork.M_Cork=1
+/Game/PotionBottles/M_RoundBot.M_RoundBot=1
+/Game/Easel/Easel.Easel=1
+/Game/Candle/Candle.Candle=1
+/Game/Candle/M_Candle.M_Candle=1
+/Game/Easel/M_Easel.M_Easel=1
+/Game/BookCase/Bookshelf_Top_Pieces.Bookshelf_Top_Pieces=1
+/Game/BookCase/Cabinet_Door_Pieces.Cabinet_Door_Pieces=1
+/Game/BookCase/How_TF_Did_I_Forget_.How_TF_Did_I_Forget_=1
+/Game/BookCase/lambert1.lambert1=1
+/Game/BookCase/Shelve_Pieces.Shelve_Pieces=1
+/Game/BookCase/Side_Wall_Pieces.Side_Wall_Pieces=1
+/Game/BookCase/Bookcase.Bookcase=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1880,7 +1902,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia Game/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=C:/Users/hoang/Documents/GitHub/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -3454,7 +3476,7 @@ MRUItem11=/Game/Levels/Magenta_Test_Room
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=PIE
+LastLogListing=FBXImport
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -3834,6 +3856,7 @@ Emitter.Particles=False
 
 [SuppressableDialogs]
 ExtrudeCoordsWarning=False
+Warning_NoPreviewMeshFound=False
 
 [FoliageEdit]
 Radius=712.901855
@@ -3863,7 +3886,6 @@ None=======
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 bRealtimeMaterialViewport=False
 
 [MaterialEditor]
