--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -172,7 +172,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.000000
+ContentBrowserTab1.ThumbnailSizeScale=0.151786
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -213,19 +213,15 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Geometry/Meshes/Plants/ReactivePlant.ReactivePlant
 OpenAssetsAtExit=/Game/Blueprints/AOE/Splatter/AOE_Blue.AOE_Blue
-OpenAssetsAtExit=/Game/Blueprints/AOE/Splatter/AOE_Green.AOE_Green
-OpenAssetsAtExit=/Game/Blueprints/AOE/Splatter/AOE_Magenta.AOE_Magenta
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/AOE/Splatter/AOE_Magenta
-MRUItem1=/Game/Blueprints/AOE/Splatter/AOE_Green
-MRUItem2=/Game/Blueprints/AOE/Splatter/AOE_Blue
-MRUItem3=/Game/Geometry/Meshes/Plants/ReactivePlant
-MRUItem4=/Game/Plants/ReactivePlant
-MRUItem5=/Game/Levels/NewMap
+MRUItem0=/Game/Levels/NewMap
+MRUItem1=/Game/Blueprints/AOE/Splatter/AOE_Blue
+MRUItem2=/Game/Geometry/Meshes/Plants/ReactivePlant
+MRUItem3=/Game/Blueprints/AOE/Splatter/AOE_Magenta
+MRUItem4=/Game/Blueprints/AOE/Splatter/AOE_Green
+MRUItem5=/Game/Plants/ReactivePlant
 MRUItem6=/Game/Levels/testYellow
 MRUItem7=/Game/Levels/Sewer
 MRUItem8=/Game/Levels/testGreen
@@ -1671,7 +1667,7 @@ AOE_Green_C.Input=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
@@ -1722,8 +1718,8 @@ GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -2056,7 +2052,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -3974,6 +3970,7 @@ AOE_Magenta_C=
 AOE_Decal_C=
 K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 MySaveGame_C=
+BoxComponent=BoxComponent.Collision.Collision,
 
 [PlacementMode]
 RecentlyPlaced=/Game/Geometry/Meshes/Plants/ReactivePlant.ReactivePlant;
