--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,7 +150,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Gates
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -213,7 +213,6 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/AOE/Splatter/AOE_Blue.AOE_Blue
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Levels/NewMap
@@ -1664,10 +1663,17 @@ AOE_Green_C.Rendering=True
 AOE_Green_C.Collision=True
 AOE_Green_C.Actor=True
 AOE_Green_C.Input=True
+Gate_C.TransformCommon=True
+Gate_C.Default=True
+Gate_C.Rendering=True
+Gate_C.Replication=True
+Gate_C.Collision=True
+Gate_C.Input=True
+Gate_C.Actor=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
@@ -1718,8 +1724,8 @@ GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent=
+ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -3973,6 +3979,7 @@ MySaveGame_C=
 BoxComponent=BoxComponent.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Gates/Gate.Gate;
 RecentlyPlaced=/Game/Geometry/Meshes/Plants/ReactivePlant.ReactivePlant;
 RecentlyPlaced=/Game/Bubble_Staircase/Bubble_texture_Mat.Bubble_texture_Mat;
 RecentlyPlaced=/Game/Bubble_Staircase/M_Staircase_T.M_Staircase_T;
@@ -3992,7 +3999,6 @@ RecentlyPlaced=/Game/Bubble_Garland/Bubble_Garland_LP_Small_bubble43.Bubble_Garl
 RecentlyPlaced=/Game/Bubble_Garland/Bubble_Garland_LP_Small_bubble42.Bubble_Garland_LP_Small_bubble42;
 RecentlyPlaced=/Game/Bubble_Garland/Bubble_Garland_LP_Small_bubble41.Bubble_Garland_LP_Small_bubble41;
 RecentlyPlaced=/Game/Bubble_Garland/Bubble_Garland_LP_Small_bubble40.Bubble_Garland_LP_Small_bubble40;
-RecentlyPlaced=/Game/Bubble_Garland/Bubble_Garland_LP_Small_bubble4.Bubble_Garland_LP_Small_bubble4;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
