Added SFX_Footsteps_Grass (5), SFX_Footsteps_Stone (5), SFX_Footsteps_Water (5)
Check the first one of each in the Audio/SFX/Cue folder for randomized SFX and sound modulation.

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,7 +150,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Paintstation
+ContentBrowserTab1.SelectedPaths=/Game/Audio
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -215,26 +215,26 @@ ToolbarOpenBPClass.CurrentViewType=0
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Paintstation/Paint_Station_LP
-MRUItem1=/Game/Paintstation/Paint_Station_Textures/Knob_Height
-MRUItem2=/Game/Paintstation/Paint_Bottles
-MRUItem3=/Game/Paintstation/Metal
-MRUItem4=/Game/Paintstation/Knob
-MRUItem5=/Game/Paintstation/Cups
-MRUItem6=/Game/Paintstation/Cabinet
-MRUItem7=/Game/Paintstation/Brushes
-MRUItem8=/Game/Lever/BaseLever
-MRUItem9=/Game/Lever/BaseLever_Mat
-MRUItem10=/Game/Bubble_Tree/Bubble_Tree_LP_Top_Tree_Bush
-MRUItem11=/Game/Bubble_Tree/Bubble_Tree_LP_Tree_base
-MRUItem12=/Game/Bubble_Tree/Tree_BUzH2_Mat
-MRUItem13=/Game/Bubble_Tree/Tree_Bush2_Mat
-MRUItem14=/Game/Bubble_Tree/Tree_Base2_Mat
-MRUItem15=/Game/Bubble_Tree/Tree_Bush_Mat
-MRUItem16=/Game/Bubble_Tree/Bubble_Tree_LP_Left_Branch
-MRUItem17=/Game/Bubble_Tree/Bubble_Tree_LP_Right_Branch
-MRUItem18=/Game/Bubble_Tree/Tree_Base_Mat
-MRUItem19=/Game/Sun_Rise/Sun_Model
+MRUItem0=/Game/Audio/SFX/Cues/SFX_Footsteps_Stone_1_Cue
+MRUItem1=/Game/Audio/SFX/Cues/SFX_Footsteps_Grass_1_Cue
+MRUItem2=/Game/Audio/SFX/Wavs/SFX_Footsteps_Grass_5
+MRUItem3=/Game/Audio/SFX/Cues/SFX_Footstep_Sand_1_Cue
+MRUItem4=/Game/Audio/SFX/Cues/Smoke01_Cue
+MRUItem5=/Game/Paintstation/Paint_Station_LP
+MRUItem6=/Game/Paintstation/Paint_Station_Textures/Knob_Height
+MRUItem7=/Game/Paintstation/Paint_Bottles
+MRUItem8=/Game/Paintstation/Metal
+MRUItem9=/Game/Paintstation/Knob
+MRUItem10=/Game/Paintstation/Cups
+MRUItem11=/Game/Paintstation/Cabinet
+MRUItem12=/Game/Paintstation/Brushes
+MRUItem13=/Game/Lever/BaseLever
+MRUItem14=/Game/Lever/BaseLever_Mat
+MRUItem15=/Game/Bubble_Tree/Bubble_Tree_LP_Top_Tree_Bush
+MRUItem16=/Game/Bubble_Tree/Bubble_Tree_LP_Tree_base
+MRUItem17=/Game/Bubble_Tree/Tree_BUzH2_Mat
+MRUItem18=/Game/Bubble_Tree/Tree_Bush2_Mat
+MRUItem19=/Game/Bubble_Tree/Tree_Base2_Mat
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1663,6 +1663,14 @@ AOE_Green_C.Rendering=True
 AOE_Green_C.Collision=True
 AOE_Green_C.Actor=True
 AOE_Green_C.Input=True
+SoundCue.Memory=True
+SoundCue.Developer=True
+SoundNodeModulator.Modulation=True
+SoundNodeWavePlayer.WavePlayer=True
+SoundNodeRandom.Random=True
+SoundCue.AttenuationSubmixSend=True
+SoundCue.AttenuationPriority=True
+SoundWave.Developer=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -1986,6 +1994,8 @@ None=======
 /Game/Paintstation/Cabinet.Cabinet=1
 /Game/Paintstation/Brushes.Brushes=1
 /Game/Paintstation/Paint_Station_LP.Paint_Station_LP=1
+/Game/Audio/SFX/Cues/SFX_Footsteps_Grass_1_Cue.SFX_Footsteps_Grass_1_Cue=1
+/Game/Audio/SFX/Cues/SFX_Footsteps_Stone_1_Cue.SFX_Footsteps_Stone_1_Cue=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
