--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,7 +150,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/King_Textures
+ContentBrowserTab1.SelectedPaths=/Game/Levers/T_UniqueSwitch3
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -215,26 +215,26 @@ ToolbarOpenBPClass.CurrentViewType=0
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/King_Textures/king1
-MRUItem1=/Game/Candle/Candle
-MRUItem2=/Game/Axe/mesh/Axe_Forest_Low
-MRUItem3=/Game/Geometry/Meshes/Plants/Leaf_Plane
-MRUItem4=/Game/Geometry/Meshes/DuckHousing/Duck_Housing
-MRUItem5=/Game/SM_Bubble
-MRUItem6=/Game/Materials/Mat_ToonShade_BubbleInst
-MRUItem7=/Game/ParticleSystems/NS_BubbleTurbine
-MRUItem8=/Game/ParticleSystems/NE_BubbleTurbine
-MRUItem9=/Game/Sphere
-MRUItem10=/Game/StarterContent/Shapes/Shape_Sphere
-MRUItem11=/Game/Materials/P_TurbineBubbles
-MRUItem12=/Game/Materials/P_FountainBubbles
-MRUItem13=/Game/Materials/P_Bubbles
-MRUItem14=/Game/ParticleSystems/P_BubbleStream
-MRUItem15=/Game/Materials/Materials/Mat_BubbleSky
-MRUItem16=/Game/bubble_Street_Lights/Bluprint/StreetlampBP
-MRUItem17=/Game/Bubble_Garland/Bubble_Garland_Combined
-MRUItem18=/Game/Texture/GalaxyBox
-MRUItem19=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levers/M_UniqueSwitch3Lever
+MRUItem1=/Game/Levers/M_UniqueSwitch3Runes
+MRUItem2=/Game/Levers/UniqueSwitch3
+MRUItem3=/Game/Levels/Forest
+MRUItem4=/Game/Levers/UniqueSwitch2
+MRUItem5=/Game/Levers/M_UniqueSwitch2Runes
+MRUItem6=/Game/Levers/lambert2
+MRUItem7=/Game/Levers/M_UniqueSwitch1Runes
+MRUItem8=/Game/Levers/M_UniqueSwitch1Lever
+MRUItem9=/Game/Levers/UniqueSwitch1
+MRUItem10=/Game/King_Textures/king1
+MRUItem11=/Game/Candle/Candle
+MRUItem12=/Game/Axe/mesh/Axe_Forest_Low
+MRUItem13=/Game/Geometry/Meshes/Plants/Leaf_Plane
+MRUItem14=/Game/Geometry/Meshes/DuckHousing/Duck_Housing
+MRUItem15=/Game/SM_Bubble
+MRUItem16=/Game/Materials/Mat_ToonShade_BubbleInst
+MRUItem17=/Game/ParticleSystems/NS_BubbleTurbine
+MRUItem18=/Game/ParticleSystems/NE_BubbleTurbine
+MRUItem19=/Game/Sphere
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -644,7 +644,7 @@ StaticMesh.LodSettings=True
 StaticMesh.StaticMesh=True
 StaticMesh.Collision=True
 StaticMesh.ImportSettings=False
-StaticMesh.Navigation=True
+StaticMesh.Navigation=False
 StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
@@ -1589,8 +1589,8 @@ MaterialExpressionDivide.MaterialExpressionDivide=True
 MaterialExpressionDivide.MaterialExpression=True
 FbxImportUI.Animation=True
 AnimationRecordingSettings.Settings=True
-StaticMesh.Thumbnail=True
-StaticMesh.LevelOfDetail=True
+StaticMesh.Thumbnail=False
+StaticMesh.LevelOfDetail=False
 GreenPickup_Actor_C.TransformCommon=True
 GreenPickup_Actor_C.Rendering=True
 GreenPickup_Actor_C.Replication=True
@@ -1718,6 +1718,7 @@ NiagaraComponent.Navigation=True
 NiagaraComponent.Tags=True
 NiagaraComponent.Activation=True
 NiagaraComponent.Cooking=True
+AssetViewerSettings.Settings=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -2054,6 +2055,15 @@ None=======
 /Game/Geometry/Meshes/Plants/Leaf_Plane.Leaf_Plane=1
 /Game/Axe/mesh/Axe_Forest_Low.Axe_Forest_Low=1
 /Game/King_Textures/king1.king1=1
+/Game/Levers/M_UniqueSwitch1Runes.M_UniqueSwitch1Runes=1
+/Game/Levers/M_UniqueSwitch1Lever.M_UniqueSwitch1Lever=1
+/Game/Levers/UniqueSwitch1.UniqueSwitch1=1
+/Game/Levers/M_UniqueSwitch2Levers.M_UniqueSwitch2Levers=1
+/Game/Levers/UniqueSwitch2.UniqueSwitch2=1
+/Game/Levers/M_UniqueSwitch3Lever.M_UniqueSwitch3Lever=1
+/Game/Levers/M_UniqueSwitch2Runes.M_UniqueSwitch2Runes=1
+/Game/Levers/M_UniqueSwitch3Runes.M_UniqueSwitch3Runes=1
+/Game/Levers/UniqueSwitch3.UniqueSwitch3=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2117,7 +2127,7 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=624.000 Y=235.000
-ScreenPosition=X=366.000 Y=113.000
+ScreenPosition=X=2052.000 Y=136.000
 WindowSize=X=1305.000 Y=745.000
 WindowSize=X=1375.000 Y=739.000
 None=======
@@ -2138,7 +2148,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../../IG/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=C:/Users/hoang/Documents/GitHub/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -3705,22 +3715,22 @@ DistCurveEditor.TimeStamp=2021.02.15-00.29.15
 DistCurveEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Levels/NewMap
-MRUItem3=/Game/Levels/testYellow
-MRUItem4=/Game/Levels/Sewer
-MRUItem5=/Game/Levels/testGreen
-MRUItem6=/Game/Levels/TechDemo
-MRUItem7=/Game/Levels/testMagenta
-MRUItem8=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Levels/NewMap
+MRUItem4=/Game/Levels/testYellow
+MRUItem5=/Game/Levels/Sewer
+MRUItem6=/Game/Levels/testGreen
+MRUItem7=/Game/Levels/TechDemo
+MRUItem8=/Game/Levels/testMagenta
 MRUItem9=/Game/Levels/Splash_screen
 MRUItem10=/Game/Levels/NewWorld
 MRUItem11=/Game/Levels/Green_Paint
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -4062,6 +4072,7 @@ K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 MySaveGame_C=
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+AssetViewerSettings=AssetViewerSettings.Settings.PostProcessing,AssetViewerSettings.Settings.Rendering Features,
 
 [PlacementMode]
 RecentlyPlaced=/Game/ParticleSystems/NS_BubbleTurbine.NS_BubbleTurbine;
@@ -4146,6 +4157,7 @@ None=======
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
